team-app/main/default/objects/Pipeline_Review_Run_Item__c/Pipeline_Review_Run_Item__c.object-meta.xml
<CustomObject>
    <description>Per-opportunity generation outcome. Resume queries Pending and Failed only.</description>
    <label>Pipeline Review Run Item</label>
    <pluralLabel>Pipeline Review Run Items</pluralLabel>
    <nameField>
        <displayFormat>PRI-{000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>