team-app/main/default/objects/Pipeline_Review_Run_Item__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Per-row error. One bad row must not roll back the batch.</description>
    <inlineHelpText>Failure reason, 255 characters.</inlineHelpText>
    <label>Error</label>
    <type>Text</type>
    <length>255</length>
</CustomField>