team-app/main/default/objects/Pipeline_Review_Run_Item__c/fields/Generated_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Generated_Forecast__c</fullName>
    <description>Legal values only: Commit / Most Likely / Best Case / Pipeline / Omitted.</description>
    <inlineHelpText>Model forecast recommendation for this item.</inlineHelpText>
    <label>Generated Forecast</label>
    <type>Text</type>
    <length>40</length>
</CustomField>