team-app/main/default/objects/Pipeline_Review_Run_Item__c/fields/Generated_Note__c.field-meta.xml
<CustomField>
    <fullName>Generated_Note__c</fullName>
    <description>Director note from the model, held for review per write-safety rule 8.7.</description>
    <inlineHelpText>Model output before human edit. Preview before bulk write.</inlineHelpText>
    <label>Generated Note</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>