team-app/main/default/objects/Pipeline_Review_Run_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Lookup so a resume can re-queue by Id.</description>
    <inlineHelpText>Opportunity this item generated for.</inlineHelpText>
    <label>Opportunity</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity</relationshipLabel>
    <relationshipName>Pipeline_Review_Run_Items</relationshipName>
</CustomField>