team-app/main/default/objects/Pipeline_Review_Run_Item__c/fields/Pipeline_Review_Run__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Review_Run__c</fullName>
    <description>Master-detail to Pipeline_Review_Run__c.</description>
    <inlineHelpText>Parent generation run.</inlineHelpText>
    <label>Pipeline Review Run</label>
    <type>MasterDetail</type>
    <referenceTo>Pipeline_Review_Run__c</referenceTo>
    <relationshipLabel>Pipeline Review Run</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>